# minion

./: .clang-format  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Changelog  FindGMP.cmake  HOW-TO-RELEASE  Makefile  Makefile.dep  README  TODO  azure-pipelines.yml  build-all-windows.bat  build-all.sh  build.py  configure.py  configure.sh  experiment-notes  flags-readme  get_svn_version.sh  history.md  litnew.minion  make_table_minions.sh  makefile.dep  minion2-changes.md  tester.cxx  windowsbuild.bat
.github/workflows/: CI-windows.yml  CI.yml  auto-release.yml
benchmarks/: regression.filelist
benchmarks/Bibd/: bibdline1.minion  bibdline10.minion  bibdline10watched.minion  bibdline11.minion  bibdline11watched.minion  bibdline1watched.minion  bibdline2.minion  bibdline2watched.minion  bibdline3.minion  bibdline3watched.minion  bibdline4.minion  bibdline4watched.minion  bibdline5.minion  bibdline5watched.minion  bibdline6.minion  bibdline6watched.minion  bibdline7.minion  bibdline7watched.minion  bibdline8.minion  bibdline8watched.minion  bibdline9.minion  bibdline9watched.minion
benchmarks/Quasigroup/: qg-element-7-10.minion  qg-element-7-7.minion  qg-element-7-8.minion  qg-element-7-9.minion  qg-gacelement-7-10.minion  qg-gacelement-7-7.minion  (+6 more)
build_tests/: tiny_boost_test.cpp  tiny_test.cpp  tr1_test.cpp
cmake-modules/: FindBZip2.cmake  FindBoost.cmake  FindGMP.cmake  LocalFindBoost.cmake  constraints.cmake
docs/: ChrisStuff.tex  Manual.aux  Manual.bbl  Manual.blg  Manual.tex  TODO  build-readme  flags-readme  general.bib  manual.tex
emscripten/: README.md  notes.md  post.js  pre.js  test.html
etc/: ci-prepare.sh  ci.sh
external_deps/: README  build_external_deps.sh
generators/: InstanceHelp.h  MinionHelper.lsp  alternating_gen.cpp  graph_sym.cpp
manual/: Manual.aux  Manual.tex  Manual.toc  introduction.tex
mini-scripts/: ExptScript.csh  Regression.pl  analyse_minion.pl  binseq.minion  binseq.vm  build-coverage.sh  build_all_machines.sh  build_machine.sh  compare_dumptrees.py  compile-all.sh  constraint_test_common.py  create_table_propagator.py  create_table_propagator_limited.py  dread2gap.py  generateGraph.sh  get-times-nodes.sh  get_info.sh  get_svn_version.sh  getcolumns.py  igac-buildscript.sh  life_nosym.con  life_sym.con  make-condor-jobfile.sh  make_depend.sh  make_minion_docs.sh  make_random_trees.sh  nightly_correctness_test.py  nightly_correctness_test1.py  nightly_correctness_test2.py  nightly_correctness_test3.py  nodecount.sh  plot-comparison.csh  plot-comparison.pl  print_sol.sh  redumping-minion.sh  redumpstrap.sh  regression-test.py  rule1.g  runminion.py  sendemail.py  (+7 more)
minion/: BuildCSP.cpp  BuildCSP.h  BuildConstraint.h  BuildConstraint2.cpp  BuildConstraintConstructs.h  BuildConstraint_binarycons.cpp  BuildConstraint_binarycons2.cpp  BuildConstraint_unaryconstraints.cpp  BuildConstraint_weightedsum.cpp  BuildDefines.h  BuildDynamicConstraint.cpp  BuildDynamicConstraint_GACTable.cpp  BuildDynamicConstraint_binarycons.cpp  BuildInputVariables.h  BuildVariables.cpp  BuildVariables.h  CSPSpec.h  Doxyfile  MinionInputReader.cpp  MinionInputReader.h  MinionInputReader.hpp  MinionThreeInputReader.cpp  MinionThreeInputReader.hpp  README  StateObj.hpp  StateObj_forward.h  buildConstraints.cpp  command_search.cpp  command_search.h  commandline_parse.cpp  commandline_parse.h  constants.h  constraint_setup.cpp  constraint_setup.h  counter.hpp  debug.h  debug_functions.cpp  dump_state.cpp  dump_state.hpp  get_info.cpp  (+36 more)
nauty24b7/: README  addedgeg.c  amtog.c  biplabg.c  configure  configure.ac  deledgeg.c  directg.c  dreadnaut.c  formats.txt  genbg.c  geng.c  genrang.c  gtools.c  gutil2.c  labelg.c  listg.c  makefile.basic  makefile.in  naugraph.c  nausparse.c  nausparse.h  nauty-h.in  nauty.h  nautycxx.cpp  shortg.c  showg.c  sumlines.c
propagator_tree/: constraints.hpp  data_point.hpp  gen_prob.cc  propagation.hpp  proptree.cpp
python-scscp/: VarValToDomain.py  gapd.sh  mk_graph.g  myserver.g  nsi.g  nsils.g  perms.py  scscp.py
release-scripts/: make-release-intel-linux-static.sh  make-release-intel-linux.sh  make-release-intel-mac.sh  make-release-mac.sh  make-release-ppc-mac.sh  make-release-windows.sh  make-release.sh  make-sf-release.sh
sphinxdocs/: building.rst  conf.py  index.rst  introtominion.rst  make-minion-commandline.sh  refs.bib  usingminion.rst  welcome.rst  zreferences.rst
summer_school/: format_example.minion
sym_test/: bibd33110.minion  eq1.minion  eq2.minion  eq3.minion  eq4.minion  eq5.minion  fail_graph  fail_group  run_tests.sh  sum1.minion  sum2.minion  sum3.minion  sum4.minion  sum5.minion  sum6.minion  tiny_bibd.minion
test_instances/: README  basic_short_table_1.minion  basic_shortstr2_table_1.minion  big_do_basic_tests.sh  big_do_random_tests.sh  broken_short_table_1.minion  broken_short_table_2.minion  broken_short_table_3.minion  broken_short_table_4.minion  circulargolombruler.minion  do_basic_tests.sh  do_random_tests.sh  do_valgrind_tests.sh  empty_short_table_1.minion  empty_short_table_2.minion  farm_puzzle_smart.minion  fullprop_test.sh  litnew.minion  multiple_short_table_1.minion  neg_test_fail.minion  new_empty_table_1.minion  new_empty_table_2.minion  new_empty_table_3.minion  new_format_examples.minion  new_optimise_1.minion  new_optimise_2.minion  new_optimise_3.minion  new_optimise_list_1.minion  new_optimise_list_2.minion  new_optimise_list_3.minion  new_optimise_listtest.minion  new_optimisetest.minion  new_test_alias.minion  new_test_alias_1.minion  new_test_alias_2.minion  new_test_lex_1.minion  new_test_matrices.minion  new_test_notbool_1.minion  new_test_product_1.minion  new_test_reify_eq.minion  (+280 more)
tester/: Cargo.toml
tester/src/: constraint_def.rs  counter.rs  main.rs  minion_instance.rs  run_minion.rs  test_types.rs
tuple_squeeze/: squash.cc  squash.hpp  tuple_squash.cc
visualisation/: Gui.hs  MinionParser.hs  MinionParserTest.hs  MinionVisualiser.hs  README  Test.hs  minion-visualiser.cabal
visualisation/treeviz/: xml.rb
visualisation/ubigraph/: graph.rb
(+1008 files in other folders)
